@@ -1,0 +1,10 @@
+/*****************************************************************************\
+ *  $Id: cerebrod.h,v 1.9 2005-07-07 21:48:34 achu Exp $
+\*****************************************************************************/
+
+#ifndef _CEREBROD_H
+#define _CEREBROD_H
+
+#define CEREBROD_THREAD_STACKSIZE (1024*1024)
+
+#endif /* _CEREBROD_H */
