@@ -8,6 +8,8 @@
 
 	* cerebro.spec.in: Updated.
 
+	* Fix pthread creation bugs.
+
 	* tagged cerebro-1-0-0-pre4
 	
 2005-07-06  Albert Chu  <chu11@llnl.gov>
